--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>de.freerider</groupId>
     <artifactId>se2.freerider-application</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>2.6.0</version>
     <name>app</name>
     <description>app</description>
     <properties>
